--- a/src/main/resources/web/dirsearch.css
+++ b/src/main/resources/web/dirsearch.css
@@ -65,3 +65,31 @@ button {
 a {
     color: #000;
 }
+
+#spinner-overlay {
+    display: none; /* or flex */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+#spinner {
+    border: 1vmin solid #17bb35;
+    border-top: 1vmin solid #f37021;
+    border-radius: 50%;
+    width: 6vmin;
+    height: 6vmin;
+    margin: auto;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
